GET#index Sequence.
